src/snapshots/cronexpr__parser__tests__crontab_guru_examples-40.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0 1 1 * UTC\").unwrap()"
---
Crontab {
    minutes: PossibleLiterals {
        values: {
            0,
        },
    },
    hours: PossibleLiterals {
        values: {
            0,
        },
    },
    months: PossibleLiterals {
        values: {
            1,
        },
    },
    days_of_month: PossibleLiterals {
        values: {
            1,
        },
    },
    days_of_week: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
        },
    },
    timezone: TimeZone(
        "UTC",
    ),
}
